# sentido-financiero

./: .dockerignore  .env.local  DEPLOYMENT.md  Dockerfile  Makefile  README.md  alembic.ini  analyze_pdfs.py  debug_card_extraction.py  diagram.md  docker-compose.yml  example.env  init-db.sql  init_db.py  main.py  migrate.sh  plan.md  pyproject.toml  setup.sh  test_config.py  test_direct_card_extraction.py  test_full_pipeline.py  test_ocr_extraction.py  test_ocr_table_parser.py  test_parser.py  test_simple_card_extraction.py  test_universal_parser.py  test_updated_patterns.py  verify-deployment.sh
.windsurf/: statement_structure_guide.md  task.md
.windsurf/rules/: docs.md
app/: __init__.py  config.py  crud.py  exceptions.py  main.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: statements.py  transactions.py
app/api/v1/: api.py
app/api/v1/endpoints/: endpoints.py  health_check.py  statements.py
app/db/: base.py  session.py
app/models/: __init__.py  statement.py
app/schemas/: statement.py  statements.py
app/services/: __init__.py  condusef_parser.py  evaluation_framework.py  llm_client.py  mexican_parser.py  ocr_table_parser.py  pdf_parser.py  smart_categorizer.py  table_extractor.py
app/utils/: table_extraction_test.py
frontend/: .eslintrc.cjs  .gitignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: ConfirmationModal.jsx  ErrorBoundary.jsx  Layout.jsx  ThemeToggle.jsx  UI.jsx
frontend/src/components/ui/: Tooltip.jsx
frontend/src/contexts/: ThemeContext.jsx
frontend/src/hooks/: useStatements.jsx
frontend/src/pages/: Dashboard.jsx  IntegratedDashboard.jsx  StatementDetail.jsx  Statements.jsx  Upload.jsx
frontend/src/services/: api.js
frontend/src/utils/: helpers.js
migrations/: env.py
migrations/versions/: 327566da4ed1_initial_migration_with_statement_models.py  6240c948d540_initial_database_schema.py  eff706ded328_add_file_size_to_bank_statements.py
nginx/: nginx.conf
tests/services/: README.md  test_card_extraction.py  test_table_extraction.py
