[project]
name = "statement-sense"
version = "0.1.0"
description = "AI-powered bank statement analyzer with smart transaction categorization"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn>=0.34.2",
    "pydantic>=2.11.4",
    "sqlalchemy>=2.0.41",
    "alembic>=1.15.2",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.0",
    "pydantic-settings>=2.3.4",
    "pdfplumber>=0.10.3",
    "python-multipart>=0.0.6",
    "regex>=2023.10.3",
    "httpx>=0.27.0",
    "python-dateutil>=2.8.2",
    "ollama>=0.4.2",
    "pandas>=2.2.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.3.2",
    "pytest-cov>=5.0.0",
    
    # Code formatting
    "black>=24.4.2",
    "isort>=5.13.2",
    
    # Type checking
    "mypy>=1.9.0",
    
    # Linting
    "ruff>=0.3.4",
    
    # Pre-commit hooks
    "pre-commit>=4.2.0",
    
    # Security
    "pip-audit>=2.7.3"
]

[tool.ruff]
select = ["E", "F", "I"]
ignore = []
# Exclude migrations from pre-commit and general linting
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "migrations",
]
line-length = 80
fix = true

[tool.setuptools]
packages = ["app"]

